# ultrastar-webserver

./: .coverage  .gitignore  .pi.env  .test.env  INSTALL.md  README.md  app.py  example.env  index.py  parser.py  pyproject.toml  repository.py
.github/workflows/: pytest.yaml
server/: parser.py  repository.py
server/tags/: excel.py
templates/: index.html
test/data/db/: Ultrastar.db  song_info_2020-08-11.xlsx  test.db
test/data/songs/101 Dalmatiner - Cruella De Vil/: 101 Dalmatiner - Cruella De Vil.txt
test/data/songs/10CC - I'm Not In Love/: 10CC - I'm Not In Love.txt
test/data/songs/Ariana Grande & John Legend - Beauty and the Beast/: Ariana Grande & John Legend - Beauty and the Beast [MULTI].txt  Ariana Grande & John Legend - Beauty and the Beast.txt
test/data/songs/Crazy Ex-Girlfriend - It Was A Shit Show/: Crazy Ex-Girlfriend - It Was A Shit Show.txt
test/data/songs/Crazy Ex-Girlfriend - You Stupid Bitch/: Crazy Ex-Girlfriend - You Stupid Bitch.txt
test/data/songs/Eminem - Lose yourself/: Eminem - Lose yourself.txt
test/data/songs/Hamilton Broadway Cast - Cabinet Battle #1/: Hamilton Broadway Cast - Cabinet Battle #1.txt
test/data/songs/Ricky Martin - La vida loca/: Ricky Marin - La Vida Loca.txt
test/integration/: test_index_integration.py
test/output/: output.db
test/unit/: test_app.py  test_index.py  test_parser.py  test_repository.py
test/unit/index/: __init__.py  test_with_pytest.py
test/unit/server/: test_parser.py  test_repository.py
test/unit/server/tags/: test_excel.py
