[tool.poetry]
name = "ultrastar-server"
version = "0.1.0"
description = ""
authors = ["pheelwell"]
readme = "README.md"
#packages = [{include = "ultrastar_server"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sqlalchemy = "^2.0.23"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.0"
pyinstaller = "^6.3.0"

[tool.poetry.scripts]
run-server = "flask:main.debug.run(host='0.0.0.0')"
index-db = "index:index_songs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
env_files = [".test.env"]
testpaths = [
    "test",
    "integration",
]

[tool.coverage.report]
omit = [
    "test/*"
    ]
